--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </li>
             <li class="game-item">
                 <img src="proxy-image.jpg" alt="لعبة 2">
-                <h2>أداة Gerker بالعربي</h2>
-                <p>أداة خاصة لتصنيع اليوزرات للمنصات الإجتماعية او الإختراق</p>
-                <a href="https://github.com/AhmedXCX722/Gerker-ar" target="_blank">الذهاب</a>
+                <h2>أداة Uonor</h2>
+                <p>أداة خاصة لفحص اليوزرات للمنصات الإجتماعية او الإختراق</p>
+                <a href="https://github.com/AhmedXCX722/Uonor" target="_blank">الذهاب</a>
             </li>
             <!-- يمكنك إضافة المزيد من الألعاب هنا -->
         </ul>
