--- a/index.html
+++ b/index.html
@@ -85,15 +85,9 @@
             </li>
             <li class="game-item">
                 <img src="proxy-image.jpg" alt="لعبة 2">
-                <h2>أداة Gerker بالإنجليزي</h2>
-                <p>أداة خاصة لتصنيع اليوزرات للمنصات الإجتماعية او الإختراق</p>
-                <a href="https://github.com/AhmedXCX722/Gerker-en" target="_blank">الذهاب</a>
-            </li>
-            <li class="game-item">
-                <img src="proxy-image.jpg" alt="لعبة 2">
-                <h2>أداة Uonor</h2>
-                <p>أداة خاصة لفحص اليوزرات للمنصات الإجتماعية او الإختراق</p>
-                <a href="https://github.com/AhmedXCX722/Uonor" target="_blank">الذهاب</a>
+                <h2>KDos - Tool</h2>
+                <p>أداة قوية جدا ومتطورة لهجمات DDos</p>
+                <a href="https://github.com/AhmedXCX722/KDos" target="_blank">الذهاب</a>
             </li>
             <!-- يمكنك إضافة المزيد من الألعاب هنا -->
         </ul>
